Spacing issue fix

--- a/styles/mobilemenu.css
+++ b/styles/mobilemenu.css
@@ -43,7 +43,8 @@
     flex-direction: row;
     flex-basis: 100px;
     /* padding-top: 5px; */
-    padding-bottom: 5px;
+    padding-bottom: 10px;
+    line-height: 18px;
     position: relative;
 }
 
